# simulacra

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/simulacra/: __init__.py  builder.py  causal.py  families.py  family.py  graph.py  pipeline.py  states.py  survival.py  transforms.py
tests/: conftest.py  test_builder.py  test_causal.py  test_graph.py  test_transforms.py
