[project]
name = "simulacra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["beartype>=0.22.9", "torch>=2.11.0"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.23.1",
    "numpy>=2.4.4",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.pyright]
include = ["src", "tests"]
strict = ["src", "tests"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
